Key changes: •Removed unused imports (HashSet, Set) •Fixed inconsistent naming (tableaus → tableau) •Simplified nested logic by inverting conditions early (guard clauses) •Improved readability in comparison methods and game loop logic